# quickbms-lsp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  build.rs
.github/workflows/: quickbms-lsp.yml
examples/: cleanexit.bms  comments.bms  endian.bms  findloc.bms  for.bms  functions.bms  get.bms  goto.bms  idstring.bms  if.bms  math.bms  variables.bms
grammars/: quickbms.g4
regression_tests/: test.py
regression_tests/baselines/document_symbol_functions/: input.txt  output.txt
regression_tests/baselines/folding_range_for_loops/: input.txt  output.txt
regression_tests/baselines/folding_range_functions/: input.txt  output.txt
regression_tests/baselines/open_document/: input.txt
regression_tests/baselines/startup_and_shutdown/: input.txt  output.txt
scripts/: test_grammar_against_examples.sh
src/: lib.rs  main.rs
src/client/: main.rs
src/grammar/: ast.rs  parsing.rs  quickbms.g4
src/server/: keyword_docs.rs  server.rs  state.rs
src/server/keyword_docs/: append.txt  asize.txt  byte.txt  cleanexit.txt  clog.txt  comtype.txt  do.txt  encryption.txt  endian.txt  extension.txt  filexor.txt  findloc.txt  for.txt  functions.txt  get.txt  getarray.txt  getdstring.txt  getvarchr.txt  goto.txt  idstring.txt  if.txt  label.txt  log.txt  long.txt  math.txt  open.txt  padding.txt  print.txt  putvarchr.txt  quickbmsver.txt  reverselong.txt  reverselonglong.txt  reverseshort.txt  savepos.txt  set.txt  short.txt  string.txt
tree-sitter-quickbms/: .gitignore  Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-quickbms/test/corpus/: append.bms  cleanexit.bms  clog.bms  comments.bms  comtype.bms  do.bms  empty.bms  encryption.bms  endian.bms  filexor.bms  findloc.bms  for.bms  functions.bms  get.bms  getarray.bms  getdstring.bms  getvarchr.bms  goto.bms  hello_world.bms  idstring.bms  if.bms  log.bms  math.bms  open.bms  padding.bms  putvarchr.bms  quickbmsver.bms  reverselong.bms  reverselonglong.bms  reverseshort.bms  savepos.bms  set.bms  string.bms  variables.bms
