[package]
name = "quickbms-lsp"
version = "0.1.0"
authors = ["Christopher Wells <cwellsny@nycap.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "=0.2"
jsonrpc-core = "17.0.0"
lsp-types = "0.89.0"
serde = "1.0.125"
serde_json = "1.0.64"